tests/baselines/reference/shorthandPropertyAssignmentInES6Module.errors.txt
test.ts(2,19): error TS2307: Cannot find module './missingModule' or its corresponding type declarations.


==== existingModule.ts (0 errors) ====
    export var x = 1;
    
==== test.ts (1 errors) ====
    import {x} from './existingModule';
    import {foo} from './missingModule';
                      ~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './missingModule' or its corresponding type declarations.
    
    declare function use(a: any): void;
    
    const test = { x, foo };
    
    use(x);
    use(foo);